# leoliu36.github.io

./: .nojekyll  README.md  _quarto.yml  about.html  index.html  index.qmd  pyproject.toml  requirements.txt  robots.txt  search.json  sitemap.xml
.github/workflows/: quarto-publish.yml
_site/: about.html  index.html  search.json
assignment_01/: system_info.docx  system_info.qmd
