[project]
name = "leoliu36-github-io"
version = "0.1.0"
description = ""
authors = [
    {name = "Leo Liu",email = "leoliu36@bu.edu"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]

[tool.poetry]
packages = [{include = "leoliu36"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
